--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Will Andy Pick Me?</title>
   </head>
   <body>
+    <div class="top-text">Will Andy Pick Me?
+    </div>
+    <div class="body-content">
+      <div class="main-content">
+        <input type="text" class="question-box" placeholder="Ask your question here!">
+        </input>
+        <button class="ask-question-button">Get your answer
+        </button>
+        <img src="./assets/eight-ball.png" class="eight-ball" alt="image of 8 ball">
+        <div class="answer-to-question">
+        </div>
+      </div>
+      <img src="./assets/woody.png" alt="Woody from toystory" class="woody-picture">
+    </div>
 
   </body>
+  <script type="text/javascript" src="index.js"></script> 
 </html>
